# Optimal-Area-Polygonization-Using-Local-Search-Algorithm-and-Simulated-Annealing

./: README.md
include/: Area-Optimal_Polygonization_Using_Local_Search.hpp  Area-Optimal_Polygonization_Using_Simulated_Annealing.hpp  Area-Optimal_Polygonization_Using_Spatial_Division.hpp  Local_Search_Area-Optimal_Polygonization.hpp  Polygonization_Using_Convex_Hull_Algorithm.hpp  Polygonization_Using_Incremental_Algorithm.hpp  Simulated_Annealing.hpp  Simulated_Annealing_Area-Optimal_Polygonization.hpp  Spatial_Subdivision.hpp  Utilities.hpp
instances/data/images/: london-0000090.instance
modules/: Area-Optimal_Polygonization_Using_Local_Search.cpp  Area-Optimal_Polygonization_Using_Simulated_Annealing.cpp  Area-Optimal_Polygonization_Using_Spatial_Division.cpp  Local_Search_Area-Optimal_Polygonization.cpp  Polygonization_Using_Convex_Hull_Algorithm.cpp  Polygonization_Using_Incremental_Algorithm.cpp  Simulated_Annealing.cpp  Simulated_Annealing_Area-Optimal_Polygonization.cpp  Spatial_Subdivision.cpp  Utilities.cpp
programs/: CMakeLists.txt  blah.txt  main.cpp
